--- a/Customers/index.html
+++ b/Customers/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company</title>
+    <link rel="shortcut icon" href="../asset/icon.png" type="k-icon">
 </head>
 <body>
     <main class="Main">
@@ -28,7 +29,7 @@
                         <a class="Account" href="../FirstPhasePresentation/Sign up/indext.html">
                             <button class="But">Create free account</button>
                         </a>
-                    <div class="Flag"><img src="" alt=""></div>
+                    <div class="Flag"><img src="../asset/IMG_9556.PNG" height="50%" width="70%" alt=""></div>
                 </div>
             </div>
         </header>
