--- a/FirstPhasePresentation/Sign up/indext.html
+++ b/FirstPhasePresentation/Sign up/indext.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="../Sign up/asset/icon.png" type="k-icon">
   </head>
   <body   background="asset/Internet-Website-PNG-Photos.png">
     <main>
