--- a/FirstPhasePresentation/login/index.html
+++ b/FirstPhasePresentation/login/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log in</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="../login/asset/icon.png" type="k-icon">
   </head>
   <body background="asset/Internet-Website-PNG-Photos.png">
     <main>
