--- a/Mainpage/index.html
+++ b/Mainpage/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
+    <link rel="shortcut icon" href="../asset/icon.png" type="k-icon">
 </head>
 <body>
     <main class="Main">
@@ -28,7 +29,7 @@
                         <a class="Account" href="../FirstPhasePresentation/Sign up/indext.html">
                             <button class="But">Create free account</button>
                         </a>
-                    <div class="Flag"><img src="" alt=""></div>
+                    <div class="Flag"><img src="../asset/IMG_9556.PNG" height="50%" width="70%" alt=""></div>
                 </div>
             </div>
         </header>
@@ -132,7 +133,7 @@
                             <a class="For" href="">Success rates</a>
                            </div>
                             <div class="Dd">
-                                <a class="For" href="">For Schools</a>
+                                <a class="For" href="https://www.google.com/maps/dir/6.4490586,3.3524775/Morit+International+school,+Opposite+4+Iyalode+St,+LGA,+Ajegunle,+Lagos/@6.4501699,3.3493056,15z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x103b8bc42ac633bb:0x52212a0be0f66929!2m2!1d3.3504935!2d6.4555587?entry=ttu&g_ep=EgoyMDI0MDgyMS4wIKXMDSoASAFQAw%3D%3D">For Schools</a>
                             </div>
                             <div class="Dd">
                                 <a class="For" href="">For Startups</a>
@@ -161,13 +162,13 @@
                         <div class="Mommy">
                             <p>Learn</p>
                            <div class="Dd">
-                            <a class="For" href="">Blog</a>
+                            <a class="For" href="https://blogs.worldbank.org/en/home">Blog</a>
                            </div>
                             <div class="Dd">
                                 <a class="For" href="">Guides</a>
                             </div>
                             <div class="Dd">
-                                <a class="For" href="">Contact Us</a>
+                                <a class="For" href="../FirstPhasePresentation/Support/index.html">Contact Us</a>
                             </div>
                            <div class="Dd">
                             <a class="For" href="">Status Page</a>
