--- a/FirstPhasePresentation/Dashboard/index.html
+++ b/FirstPhasePresentation/Dashboard/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="../Dashboard/asset/icon.png" type="k-icon">
   </head>
   <body>
     <main>
@@ -20,7 +21,7 @@
         </div>
         <div class="Bottom-head">
           <div class="Bottom-head-wrap">
-            <nav><a href=""><img class="Icons"  src="asset/Vector (6).svg" alt="" />    Overview</a></nav>
+            <nav><a href="/Mainpage/index.html"><img class="Icons"  src="asset/Vector (6).svg" alt="" />    Home</a></nav>
             <nav><a href=""> <img class="Icons" src="asset/Vector (5).svg" alt="">    Project</a></nav>
             <nav><a href=""> <img class="Icons"  src="asset/ion_document-outline.svg" alt="">Documents</a></nav>
             <nav><a href=""> <img class="Icons"  src="asset/Vector (4).svg" alt="">    Progress</a></nav>
