--- a/FirstPhasePresentation/Support/index.html
+++ b/FirstPhasePresentation/Support/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Support</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="../Support/asset/icon.png" type="k-icon">
   </head>
   <body>
     <main>
